updated fallback logic, added unit test/mock test

--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -548,7 +548,7 @@ textarea:hover {
     border-radius: 5px;
     border: 2px dashed #009d8e; 
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    transition: .1s;
+    transition: 0.01s;
     font-size: 0.8rem;
 }
 
@@ -557,7 +557,7 @@ textarea:hover {
 }
 
 .review-submit-btn:hover {
-    transition: .1s;
+    transition: 0.1s;
     border: 2px dashed #009d8e; 
     background-color: #fff;
     color: #009d8e; 
